tests/compile-fail/integration__integration__ecl_features__eosd_cant_cast.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:11:17
   │
11 │         int a = int(F0 + 2.0);
   │                 ^^^^^^^^^^^^^ this unary operation not supported by format

error: feature not supported by format
   ┌─ <input>:12:19
   │
12 │         float x = float(I0 + 2);
   │                   ^^^^^^^^^^^^^ this unary operation not supported by format


